--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "lg-subscription-chatbot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "LG전자 구독 상담 챗봇 - 카카오 오픈빌더 스킬 서버",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "prebuild": "node scripts/convert-price.js",
+    "dev": "node scripts/convert-price.js && next dev",
     "build": "next build",
     "start": "next start"
   },
